src/test/deca/context/invalid/objet/subtype_method_return.deca
// Description:
//    Redefinition de methode sans le bon type.
//
// Resultats:
//      Error
//
// Historique:
//    cree le 04/01/2023

class C{

}

class D extends C{

}

class A{
    D x(){

    }
}

class B extends A{
    C x(){

    }
}

